[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta

[project]
name = "art-txt"
version = "0.1.0"
description = "Convert an image into ASCII or Braille txt art."
readme = "README.md"
lincese = "Unlicense"
authors = [
    {name = "Gustavsson", email = gustavopdo.21gmail.com}
]
requires-python = ">=3.13"
dependecies = ["Pillow>= "12.0.0"]

[project.scripts]
art-txt = "art_txt.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/llGustavsson/art-txt"